crates/swc_ecma_parser/tests/test262-error-references/fail/4ee75fab1ccee715.js.stderr
error: Invalid access to super
 --> $DIR/tests/test262-parser/fail/4ee75fab1ccee715.js:1:16
  |
1 | ({ a() { (super).b(); } });
  |                ^

